Global  - Add recogito lib  - Enhance style
Document
 - Add tags

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,8 @@ django-sass-processor
 django-compressor
 django-tailwind
 libsass
-
+lxml
+nltk
 markdown
 markdown-link-attr-modifier==0.2.0
 markdownify
