Documents  - Allow file upload (mp3 only atm)  - Add AudioDocument Model  - Add Annotation Model  - Use Django polymorphic for easier handling of document types
AudioDocument
 - Beginning of annotation tool
 - SpeechRecognition to fill in annotations

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,7 @@ markdown
 markdown-link-attr-modifier==0.2.0
 markdownify
 beautifulsoup4==4.10.0
+python-magic
+pydub
+SpeechRecognition
+django-polymorphism
